# libxsvf

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  svf.c  xsvftool-dummy.c  xsvftool-ft232h.c
